k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: astro-app
  labels:
    app.kubernetes.io/instance: astro-app
    app.kubernetes.io/part-of: astro-app
