k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-app
  namespace: astro-app
  labels:
    app: astro-app
    app.kubernetes.io/name: astro-app
    app.kubernetes.io/instance: astro-app
    app.kubernetes.io/part-of: astro-app
    backstage.io/kubernetes-id: astro-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro-app
  template:
    metadata:
      labels:
        app: astro-app
        app.kubernetes.io/name: astro-app
        app.kubernetes.io/instance: astro-app
        backstage.io/kubernetes-id: astro-app
    spec:
      containers:
        - name: astro-app
          image: quay.io/jefrankl/astro-app:e0fac1af58e0d6fc2c162e27333e8bfb824f9a6b
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
