k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: astro-app
  namespace: astro-app
  labels:
    app: astro-app
    app.kubernetes.io/name: astro-app
    app.kubernetes.io/instance: astro-app
    backstage.io/kubernetes-id: astro-app
spec:
  selector:
    app: astro-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
